--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -25,9 +25,9 @@ $bg
 		font-size rem(28px)
 		&:after
 			transition all .4s
-			content '</> AD'
+			content 'nGoPi'
 			+above(cut)
-				content '</> Anon Developer'
+				content 'Ngolah Pikir & Ati'
 
 // Header Post
 .header-post
