--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@
             </article>
 
             {% include share.html %}
-            {% include author.html %}
-            {% if page.comments != false %} 
-                {% include comments.html %}
+           # {% include author.html %}
+           # {% if page.comments != false %} 
+           #     {% include comments.html %}
             {% endif %}
             {% include footer.html %}
         </section>
