--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -27,7 +27,7 @@ $bg
 			transition all .4s
 			content 'nGoPi'
 			+above(cut)
-				content 'Ngolah Pikir & Ati'
+				content 'nGoPi'
 
 // Header Post
 .header-post
