--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -25,9 +25,9 @@ $bg
 		font-size rem(28px)
 		&:after
 			transition all .4s
-			content 'nGoPi'
+			content 'ngopi'
 			+above(cut)
-				content 'nGoPi'
+				content 'ngopi'
 
 // Header Post
 .header-post
